# slkLib

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  main.cpp
include/: lib.hpp
src/: CMakeLists.txt  lib.cpp
